cluster/apps/netbox/netbox-redis.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: netbox
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  volumeClaimTemplates:
  - metadata:
        name: data
    spec:
        accessModes: ["ReadWriteOnce"]
        resources:
            requests:
                storage: 20Gi
  - metadata:
        name: conf
    spec:
        accessModes: ["ReadWriteOnce"]
        resources:
            requests:
                storage: 20Gi
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: config-map
          configMap:
            name: redis
      containers:
      - name: redis
        image: redis
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - name: redis
          containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
        - name: conf
          mountPath: /etc/redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: netbox
  labels:
    app: redis
spec:
  type: NodePort
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: redis
    statefulset.kubernetes.io/pod-name: redis-0
