cluster/apps/netbox/netbox.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
spec:
  selector:
    matchLabels:
      app: netbox
  template:
    metadata:
      labels:
        app: netbox
    spec:
      containers:
        - name: netbox
          image: linuxserver/netbox:latest
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: netbox
  namespace: netbox
spec:
  type: NodePort
  selector:
    app: netbox
  ports:
    - port: 80
      targetPort: 8000
      name: ui-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
  annotations:
    cert-manager.io/cluster-issuer: "${CERT_CLUSTER_ISSUER}"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    hajimari.io/enable: "true"
    hajimari.io/icon: "test-tube"
spec:
  ingressClassName: "traefik"
  rules:
  - host: "netbox.${SECRET_DOMAIN}"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: netbox
            port:
              number: 80
  tls:
    - hosts:
      - "notea.${SECRET_DOMAIN}"
      secretName: "netbox-tls"
